@@ -130,7 +130,7 @@ devices = dict(
     Monitor = device('nicos.monitor.qt.Monitor',
                      title = 'MIRA Status monitor',
                      loglevel = 'debug',
-                     server = 'mira1:14869',
+                     cache = 'mira1:14869',
                      prefix = 'nicos/',
                      font = 'Luxi Sans',
                      valuefont = 'Consolas',
