@@ -58,7 +58,7 @@ devices = dict(
     Monitor = device('nicos.monitor.fl.Monitor',
                      title = 'PANDA status monitor',
                      loglevel = 'info',
-                     server = 'pandasrv.panda.frm2',
+                     cache = 'pandasrv.panda.frm2',
                      prefix = 'nicos/',
                      font = 'Luxi Sans',
                      fontsize = 14,
