@@ -25,12 +25,8 @@
 description = 'setup for the electronic logbook'
 group = 'special'
 
-sysconfig = dict(
-    cache = None,
-)
-
 devices = dict(
     Logbook = device('nicos.elog.Logbook',
                      prefix = 'logbook/',
-                     server = 'bunker.pgaa.frm2:14869'),
+                     cache = 'bunker.pgaa.frm2:14869'),
 )
