@@ -50,7 +50,7 @@ devices = dict(
     Monitor = device('nicos.monitor.qt.Monitor',
                      title = 'PGAA status monitor',
                      loglevel = 'info',
-                     server = 'bunker.pgaa.frm2',
+                     cache = 'bunker.pgaa.frm2',
                      prefix = 'nicos/',
                      font = 'Luxi Sans',
                      valuefont = 'Consolas',
