@@ -63,7 +63,7 @@ devices = dict(
     Monitor = device('nicos.monitor.qt.Monitor',
                      title = 'SANS1 status monitor',
                      loglevel = 'info',
-                     server = 'sans1ctrl.sans1.frm2',
+                     cache = 'sans1ctrl.sans1.frm2',
                      prefix = 'nicos/',
                      font = 'Luxi Sans',
                      valuefont = 'Consolas',
