@@ -72,7 +72,7 @@ devices = dict(
     Monitor = device('nicos.monitor.qt.Monitor',
                      title = 'NICOS status monitor',
                      loglevel = 'info',
-                     server = 'localhost:14869',
+                     cache = 'localhost:14869',
                      prefix = 'nicos/',
                      font = 'Luxi Sans',
                      valuefont = 'Consolas',
