@@ -95,7 +95,7 @@ devices = dict(
     Monitor = device('nicos.monitor.qt.Monitor',
                      title = 'NICOS status monitor',
                      loglevel = 'info',
-                     server = 'cpci1.toftof.frm2:14869',
+                     cache = 'cpci1.toftof.frm2:14869',
                      prefix = 'nicos/',
                      font = 'Ubuntu',
                      valuefont = 'DejaVu Sans Mono',
